--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- HTML Structure -->
     <div class="background"></div>
     <div class="container">
-        <h1>Coming Soon to Cybersonic.in</h1>
+        <h1>Coming Soon to Cybersonick.in</h1>
         <p>Your hub for cutting-edge cybersecurity content and services.</p>
         <div class="countdown" id="countdown">00d : 00h : 00m : 00s</div>
         <div class="form-container">
